# OpenReturn

./: .coverage  .gitignore  README.md  build.nix  flake.nix  module.nix  openapi.json  pyproject.toml  shell.nix
docs/: api-keys.md  api.md  index.md  ingest.md  install.md  nixos.md
docs/development/: architecture.md  testing.md
docs/scoring/: models.md
src/: cli.py  console.py  daemon.py  db.py  ingest.py  keys.py  main.py  models.py  openapi.py  sources.py  status.py
src/database/: __init__.py  base.py  openreturn.py
src/database/IRS990/: __init__.py  irs990.py  populate.sql  setup.sql  setup_api_keys.sql
src/database/Score/: __init__.py  populate.sql  score.py  setup.sql
src/parser/: __init__.py  base.py
src/router/: __init__.py  base.py
src/router/Org/: org.py  (+1 more)
src/scoring/: __init__.py  engine.py  graph.py
src/server/: server.py
src/unzipper/: __init__.py  unzipper.py
tests/: fixtures.py  test_api_keys.py  test_build_wiki.py  test_cli.py  test_daemon.py  test_database.py  test_db_commands.py  test_expanded_forms.py  test_filing_router.py  test_ingest_manage.py  test_ingest_schedule.py  test_integration.py  test_irs990_router.py  test_model_types.py  test_models.py  test_openapi.py  test_openreturn_cli.py  test_org_router.py  test_parser.py  test_render.py  test_router.py  test_score_database.py  test_score_debug.py  test_score_router.py  test_scoring_engine.py  test_serve_instance.py  test_server_auth.py  test_server_coverage.py  test_sources.py  test_status.py  test_unzipper.py  test_upload_worker.py
tools/: build_wiki.py  publish_wiki.sh
(+30 files in other folders)
