[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openreturn"
version = "0.1.0a1"
requires-python = ">=3.10"
dependencies = [
]

[project.scripts]
openreturn = "cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["cli", "main", "keys", "ingest", "console", "models", "db"]

[tool.setuptools.package-data]
"*" = ["*.sql", "*.html", "sql/**/*.sql"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
